// Copyright 2023 Gravitational, Inc
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package teleport.kube.v1;

import "teleport/legacy/types/types.proto";

option go_package = "github.com/gravitational/teleport/api/gen/proto/go/teleport/kube/v1;kubev1";

// KubeService provides methods to list Kubernetes resources when users are not allowed
// to access the underlying cluster or resources but their `search_as_roles` allow.
//
service KubeService {
  // ListKubernetesResources lists the Kubernetes resources without leaking details.
  rpc ListKubernetesResources(ListKubernetesResourcesRequest) returns (ListKubernetesResourcesResponse);
}

// ListKubernetesResourcesRequest defines a request to retrieve resources paginated. Only
// one type of resource can be retrieved per request.
//
message ListKubernetesResourcesRequest {
  // ResourceType is the Kubernetes resource that is going to be retrieved.
  string resource_type = 1;
  // Limit is the maximum amount of resources to retrieve.
  int32 limit = 2;
  // StartKey is used to start listing resources from a specific spot. It
  // should be set to the previous NextKey value if using pagination, or
  // left empty.
  string start_key = 3;
  // Labels is a label-based matcher if non-empty.
  map<string, string> labels = 4;
  // PredicateExpression defines boolean conditions that will be matched against the resource.
  string predicate_expression = 5;
  // SearchKeywords is a list of search keywords to match against resource field values.
  repeated string search_keywords = 6;
  // SortBy describes which resource field and which direction to sort by.
  types.SortBy sort_by = 7;
  // NeedTotalCount indicates whether or not the caller also wants the total number of resources
  // after filtering.
  bool need_total_count = 8;
  // UseSearchAsRoles indicates that the response should include all resources
  // the caller is able to request access to using search_as_roles
  bool use_search_as_roles = 9;
  // UsePreviewAsRoles indicates that the response should include all resources
  // the caller would be able to access with their preview_as_roles
  bool use_preview_as_roles = 11;
  // TeleportCluster is the Teleport Cluster name to route the request to.
  string teleport_cluster = 12;
  // Cluster is the Kubernetes Cluster to request the resources.
  string kubernetes_cluster = 13;
  // Namespace is the Kubernetes namespace where the resources must be located.
  // To search on every Kubernetes Namespace, do not define the value.
  string kubernetes_namespace = 14;
}

// ListKubernetesResourcesResponse is the response of ListKubernetesResources method.
message ListKubernetesResourcesResponse {
  // Resources is a list of resource.
  repeated types.KubernetesResourceV1 resources = 1;
  // NextKey is the next Key to use as StartKey in a ListResourcesRequest to
  // continue retrieving pages of resource. If NextKey is empty, there are no
  // more pages.
  string next_key = 2;
  // TotalCount is the total number of resources available after filter, if any.
  int32 total_count = 3;
}
